--- a/index.html
+++ b/index.html
@@ -3,81 +3,47 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Home | Agile Achievers</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Agile Achievers - Home</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <!-- Navbar -->
-  <div class="navbar">
-    <ul>
-      <li><a href="index.html" class="active">Home</a></li>
-      <li class="dropdown">
-        <a href="javascript:void(0)" class="dropbtn" onclick="toggleDropdown()">About</a>
-        <div class="dropdown-content" id="dropdownContent">
-          <a href="about_hardware.html">Hardware</a>
-          <a href="about_software.html">Software</a>
-        </div>
-      </li>
-      <li><a href="team.html">Team</a></li>
-      <li><a href="thingspeak.html">ThingSpeak</a></li>
-      <li><a href="water_analysis.html">Water Analysis</a></li>
-    </ul>
-  </div>
+  <!-- Include Navbar -->
+  <div id="navbar-container"></div>
 
   <!-- Main Content -->
   <div class="container">
-    <h1 class="page-title">Agile Achievers</h1>
-    <p class="subtitle">Smart Water Quality Monitoring System</p>
+    <h1 class="page-title">Air & Water Quality Monitoring</h1>
+    <p class="subtitle">Monitoring Environmental Conditions Using Sensors & IoT</p>
 
     <div class="card">
-      <h3>🚨 Problem Statement</h3>
-      <p>
-        In many regions, the quality of water is declining due to pollution, chemicals, and lack of monitoring.
-        Manual testing is time-consuming, costly, and not always available in remote or rural areas.
-      </p>
+      <h3>Problem Statement</h3>
+      <p>Air and water quality index and environment monitoring.</p>
     </div>
 
     <div class="card">
-      <h3>💡 Our Solution</h3>
-      <p>
-        We’ve developed a smart IoT-based system that continuously monitors water parameters like pH, turbidity,
-        temperature, and TDS using sensors. Data is uploaded live to ThingSpeak and accessible from anywhere.
-      </p>
+      <h3>Our Solution</h3>
+      <p>We prepared a prototype using sensors like DHT11, Turbidity Sensor, and MQ135 to measure temperature, humidity, turbidity of water, and gas concentrations. The data is collected using Arduino and ESP8266 and pushed to the cloud using ThingSpeak.</p>
     </div>
 
     <div class="card">
-      <h3>🌟 What Makes It Unique</h3>
-      <p>
-        Our project combines real-time cloud monitoring, low-cost hardware, and a user-friendly interface.
-        It’s scalable, energy-efficient, and designed for remote areas and smart city infrastructure.
-      </p>
+      <h3>Uniqueness</h3>
+      <p>This project combines real-time monitoring, IoT integration, and cloud-based visualization to create a low-cost and effective environmental tracking system.</p>
     </div>
   </div>
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 Agile Achievers – All rights reserved</p>
+    © 2025 Agile Achievers – All rights reserved
   </footer>
 
-  <!-- JS Script -->
+  <!-- Load Navbar -->
   <script>
-    function toggleDropdown() {
-      const dropdown = document.getElementById('dropdownContent');
-      dropdown.classList.toggle('show');
-    }
-
-    window.onclick = function(event) {
-      if (!event.target.matches('.dropbtn')) {
-        const dropdowns = document.getElementsByClassName("dropdown-content");
-        for (let i = 0; i < dropdowns.length; i++) {
-          const openDropdown = dropdowns[i];
-          if (openDropdown.classList.contains('show')) {
-            openDropdown.classList.remove('show');
-          }
-        }
-      }
-    };
+    fetch("navbar.html")
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById("navbar-container").innerHTML = data;
+      });
   </script>
 
 </body>
