--- a/index.html
+++ b/index.html
@@ -37,14 +37,19 @@
     © 2025 Agile Achievers – All rights reserved
   </footer>
 
-  <!-- Load Navbar -->
   <script>
-    fetch("navbar.html")
-      .then(response => response.text())
-      .then(data => {
-        document.getElementById("navbar-container").innerHTML = data;
-      });
-  </script>
+  fetch('navbar.html')
+    .then(response => response.text())
+    .then(data => {
+      document.getElementById('navbar-placeholder').innerHTML = data;
+    })
+    .then(() => {
+      // Re-run the script after navbar loads
+      const script = document.createElement('script');
+      script.src = 'script.js';
+      document.body.appendChild(script);
+    });
+</script>
 
 </body>
 </html>
