--- a/about_hardware.html
+++ b/about_hardware.html
@@ -49,14 +49,18 @@
     <p>© 2025 Environment Monitoring Team – All rights reserved</p>
   </footer>
 
-  <!-- Script to load navbar.html -->
   <script>
-    fetch('navbar.html')
-      .then(response => response.text())
-      .then(data => {
-        document.getElementById('navbar-placeholder').innerHTML = data;
-      });
-  </script>
-  <script src="script.js"></script>
+  fetch('navbar.html')
+    .then(response => response.text())
+    .then(data => {
+      document.getElementById('navbar-placeholder').innerHTML = data;
+    })
+    .then(() => {
+      // Re-run the script after navbar loads
+      const script = document.createElement('script');
+      script.src = 'script.js';
+      document.body.appendChild(script);
+    });
+</script>
 </body>
 </html>
