--- a/navbar.html
+++ b/navbar.html
@@ -2,7 +2,7 @@
   <ul>
     <li><a href="index.html" class="active">Home</a></li>
     <li class="dropdown">
-      <a href="javascript:void(0)" class="dropbtn" onclick="toggleDropdown()">About</a>
+      <a href="#" class="dropbtn" onclick="toggleDropdown()">About</a>
       <div class="dropdown-content" id="dropdownContent">
         <a href="about_hardware.html">Hardware</a>
         <a href="about_software.html">Software</a>
