--- a/navbar.html
+++ b/navbar.html
@@ -2,12 +2,12 @@
   <ul>
     <li><a href="index.html" class="active">Home</a></li>
     <li class="dropdown">
-      <a href="#" class="dropbtn" onclick="toggleDropdown()">About</a>
-      <div class="dropdown-content" id="dropdownContent">
-        <a href="about_hardware.html">Hardware</a>
-        <a href="about_software.html">Software</a>
-      </div>
-    </li>
+  <a href="javascript:void(0)" class="dropbtn" onclick="toggleDropdown()">About</a>
+  <div id="aboutDropdown" class="dropdown-content">
+    <a href="about_hardware.html">Hardware</a>
+    <a href="about_software.html">Software</a>
+  </div>
+</li>
     <li><a href="team.html">Team</a></li>
     <li><a href="thingspeak.html">ThingSpeak</a></li>
     <li><a href="water_analysis.html">Water Analysis</a></li>
