--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     © 2025 Agile Achievers – All rights reserved
   </footer>
 
+<script src="script.js" defer></script>
   <script>
   fetch('navbar.html')
     .then(response => response.text())
