--- a/about_software.html
+++ b/about_software.html
@@ -40,7 +40,7 @@
   <footer>
     <p>© 2025 Environment Monitoring Team</p>
   </footer>
-
+<script src="script.js" defer></script>
   <script>
   fetch('navbar.html')
     .then(response => response.text())
