--- a/about_hardware.html
+++ b/about_hardware.html
@@ -48,7 +48,7 @@
   <footer>
     <p>© 2025 Environment Monitoring Team – All rights reserved</p>
   </footer>
-
+<script src="script.js" defer></script>
   <script>
   fetch('navbar.html')
     .then(response => response.text())
