--- a/about.html
+++ b/about.html
@@ -9,15 +9,7 @@
 <body>
 
   <!-- Navbar -->
-  <nav class="navbar">
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html" class="active">About</a></li>
-      <li><a href="team.html">Team</a></li>
-      <li><a href="thingspeak.html">ThingSpeak</a></li>
-      <li><a href="water_analysis.html">Water Analysis</a></li>
-    </ul>
-  </nav>
+  <div id="navbar-container"></div>
 
   <!-- Main Content -->
   <div class="container">
