--- a/index.html
+++ b/index.html
@@ -36,13 +36,7 @@
   <footer>
     © 2025 Agile Achievers – All rights reserved
   </footer>
-<script>
-  fetch('navbar.html')
-    .then(res => res.text())
-    .then(data => {
-      document.getElementById('navbar-container').innerHTML = data;
-    });
-</script>
+<script src="script.js"></script>
 
 </body>
 </html>
