--- a/navbar.html
+++ b/navbar.html
@@ -1,13 +1,7 @@
 <nav class="navbar">
   <ul>
-    <li><a href="index.html" class="active">Home</a></li>
-    <li class="dropdown">
-  <a href="javascript:void(0)" class="dropbtn" onclick="toggleDropdown()">About</a>
-  <div id="aboutDropdown" class="dropdown-content">
-    <a href="about_hardware.html">Hardware</a>
-    <a href="about_software.html">Software</a>
-  </div>
-</li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
     <li><a href="team.html">Team</a></li>
     <li><a href="thingspeak.html">ThingSpeak</a></li>
     <li><a href="water_analysis.html">Water Analysis</a></li>
