--- a/about.html
+++ b/about.html
@@ -12,55 +12,63 @@
   <div id="navbar-placeholder"></div>
 
   <div class="container">
-    <h1 class="page-title">About the Project</h1>
-    <p class="subtitle">Technologies and Components Used</p>
+    <h1 class="page-title">Hardware Used</h1>
 
-    <!-- Hardware Section -->
     <div class="card">
-      <h3>Arduino UNO</h3>
-      <p>Microcontroller used for processing sensor inputs and sending data via ESP8266.</p>
-      <img src="assets/images/arduino.jpg" alt="Arduino UNO">
+      <h3>DHT11 – Temperature & Humidity Sensor</h3>
+      <p>Used to monitor the ambient temperature and humidity levels for environmental awareness and health.</p>
+      <img class="preview-img" src="dht11.jpg.jpeg" alt="DHT11 Sensor" />
     </div>
 
     <div class="card">
-      <h3>ESP8266 WiFi Module</h3>
-      <p>Used to transmit sensor data to the ThingSpeak cloud platform.</p>
-      <img src="assets/images/esp8266.jpg" alt="ESP8266 Module">
-    </div>
-
-    <div class="card">
-      <h3>DHT11 Sensor</h3>
-      <p>Measures temperature and humidity of the environment.</p>
-      <img src="assets/images/dht11.jpg" alt="DHT11 Sensor">
-    </div>
-
-    <div class="card">
-      <h3>MQ135 Gas Sensor</h3>
-      <p>Detects harmful gases like CO2, NH3, Benzene, etc., in the air.</p>
-      <img src="assets/images/mq135.jpg" alt="MQ135 Sensor">
+      <h3>MQ2 – Gas Sensor</h3>
+      <p>Detects the presence of gases like LPG, methane, and smoke to ensure air quality and safety.</p>
+      <img class="preview-img" src="mq2.jpg.jpeg" alt="MQ2 Gas Sensor" />
     </div>
 
     <div class="card">
       <h3>Turbidity Sensor</h3>
-      <p>Measures the cloudiness of water, indicating water quality.</p>
-      <img src="assets/images/turbidity.jpg" alt="Turbidity Sensor">
+      <p>Measures the cloudiness of water, helping detect water quality and contamination levels.</p>
+      <img class="preview-img" src="turbidity.jpg.jpeg" alt="Turbidity Sensor" />
     </div>
 
-    <!-- Software Section -->
+    <div class="card">
+      <h3>ESP8266 Wi-Fi Module</h3>
+      <p>Provides wireless connectivity for transmitting sensor data to online platforms like ThingSpeak.</p>
+      <img class="preview-img" src="esp8266.jpg.jpeg" alt="ESP8266 WiFi Module" />
+    </div>
+
+    <div class="card">
+      <h3>Arduino Uno</h3>
+      <p>Acts as the main microcontroller to collect sensor data and coordinate communication and control.</p>
+      <img class="preview-img" src="arduino.jpg.jpeg" alt="Arduino Uno Board" />
+    </div>
+  </div>
+
+     <!-- Main Content -->
+  <div class="container">
+    <h1 class="page-title">Software Used</h1>
+
     <div class="card">
       <h3>Arduino IDE</h3>
-      <p>Used for writing and uploading code to the Arduino board.</p>
-      <img src="assets/images/arduino_ide.png" alt="Arduino IDE">
+      <p>An open-source development environment used to write, compile, and upload code to microcontroller boards like Arduino Uno and ESP8266.</p>
     </div>
 
     <div class="card">
       <h3>ThingSpeak</h3>
-      <p>Cloud platform for visualizing and analyzing live sensor data.</p>
-      <img src="assets/images/thingspeak.png" alt="ThingSpeak Dashboard">
+      <p>An IoT analytics platform that collects, stores, visualizes, and analyzes real-time sensor data in the cloud.</p>
     </div>
 
-  </div>
+    <div class="card">
+      <h3>Visual Studio Code (VS Code)</h3>
+      <p>A lightweight and powerful source code editor used for designing the frontend of the website and integrating sensor data.</p>
+    </div>
 
+    <div class="card">
+      <h3>GitHub</h3>
+      <p>A platform for version control and collaboration that helps manage code repositories and publish websites using GitHub Pages.</p>
+    </div>
+  </div>
   <footer>
     © 2025 Agile Achievers – All rights reserved
   </footer>
