--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     <div class="card">
       <h3>MQ2 – Gas Sensor</h3>
       <p>Detects the presence of gases like LPG, methane, and smoke to ensure air quality and safety.</p>
-      <img class="preview-img" src="mq2.jpg.jpeg" alt="MQ2 Gas Sensor" />
+      <img class="preview-img" src="Mq2.jp.jpeg" alt="MQ2 Gas Sensor" />
     </div>
 
     <div class="card">
