--- a/about.html
+++ b/about.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 
-  <!-- Navbar -->
-  <div id="navbar-placeholder"></div>
+   <!-- Include Navbar -->
+  <div id="navbar-container"></div>
 
   <div class="container">
     <h1 class="page-title">Hardware Used</h1>
