--- a/navbar.html
+++ b/navbar.html
@@ -4,6 +4,6 @@
     <li><a href="about.html">About</a></li>
     <li><a href="team.html">Team</a></li>
     <li><a href="thingspeak.html">ThingSpeak</a></li>
-    <li><a href="water_analysis.html">Water Analysis</a></li>
+    <li><a href="water-analysis.html">Water Analysis</a></li>
   </ul>
 </nav>
