--- a/water-analysis.html
+++ b/water-analysis.html
@@ -152,7 +152,7 @@
   <div class="water-analysis">  
     <h2>Case 1: Polluted Water</h2>  
     <p class="description">This sample shows extremely high turbidity values and drastic drops, indicating highly polluted water.</p>  
-    <img src="Screenshot 2025-07-07 123946.png" alt="Graph showing high turbidity in polluted water">  
+    <img src="polluted water.jpg.png" alt="Graph showing high turbidity in polluted water">  
   </div>  
   
   <div class="water-analysis">  
