--- a/water-analysis.html
+++ b/water-analysis.html
@@ -158,7 +158,7 @@
   <div class="water-analysis">  
     <h2>Case 2: Usable Water</h2>  
     <p class="description">This water sample has consistent readings in the higher range but without sudden spikes, making it usable for non-drinking purposes.</p>  
-    <img src="WhatsApp Image 2025-07-07 at 12.45.08 PM.jpeg" alt="Graph showing moderate turbidity in usable water">  
+    <img src="usable water.jpg.jpeg" alt="Graph showing moderate turbidity in usable water">  
   </div>  
   
   <div class="water-analysis">  
