--- a/water-analysis.html
+++ b/water-analysis.html
@@ -164,7 +164,7 @@
   <div class="water-analysis">  
     <h2>Case 3: Drinking Water</h2>  
     <p class="description">This sample indicates a recovery from low readings to a stable, clean range — suitable for drinking after minor filtration.</p>  
-    <img src="Screenshot 2025-07-07 124820.png" alt="Graph showing low turbidity in clean drinking water">  
+    <img src="drinking water.jpg.png" alt="Graph showing low turbidity in clean drinking water">  
   </div>  
   
   <!-- Footer -->  
