--- a/water-analysis.html
+++ b/water-analysis.html
@@ -1,177 +1,56 @@
-<!DOCTYPE html>  
-<html lang="en">  
-<head>  
-  <meta charset="UTF-8" />  
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>  
-  <title>Water Quality Testing</title>  
-  <link rel="stylesheet" href="style.css">  
-  <style>
-    body {
-      font-size: 20px;
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-
-    .navbar {
-      background-color: #1f1f7a;
-      overflow: hidden;
-    }
-
-    .navbar ul {
-      margin: 0;
-      padding: 0;
-      list-style: none;
-      display: flex;
-      align-items: center;
-    }
-
-    .navbar li {
-      position: relative;
-    }
-
-    .navbar a {
-      display: block;
-      color: white;
-      padding: 16px 20px;
-      text-decoration: none;
-      font-size: 15px;
-    }
-
-    .navbar a:hover,
-    .navbar .active {
-      background-color: #102c52;
-    }
-
-    .dropdown:hover .dropdown-content {
-      display: block;
-    }
-
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      background-color: #173a6b;
-      min-width: 160px;
-      z-index: 1;
-      top: 100%;
-      left: 0;
-    }
-
-    .dropdown-content a {
-      color: white;
-      padding: 12px 16px;
-      text-decoration: none;
-      display: block;
-    }
-
-    .dropdown-content a:hover {
-      background-color: #102c52;
-    }
-
-    .container {
-      max-width: 1000px;
-      margin: 0 auto;
-      padding: 20px;
-    }
-
-    .card {
-      background-color: #f9f9f9;
-      padding: 20px;
-      margin: 30px 0;
-      border-radius: 16px;
-      box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
-    }
-
-    .card h3 {
-      font-size: 24px;
-      margin-bottom: 12px;
-      text-align: center;
-    }
-
-    .card iframe {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      width: 600px;
-      max-width: 100%;
-      height: 300px;
-      border: none;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      transition: transform 0.3s ease;
-    }
-
-    .card iframe:hover {
-      transform: scale(1.01);
-    }
-
-    .page-title {
-      font-size: 32px;
-      text-align: center;
-    }
-
-    .subtitle {
-      text-align: left;
-      font-size: 20px;
-      margin-bottom: 30px;
-    }
-
-    .graph-description {
-      text-align: left;
-      font-size: 18px;
-      margin-top: 12px;
-      line-height: 1.6;
-    }
-
-    footer {
-      text-align: center;
-      padding: 20px;
-      background-color: #f2f2f2;
-      font-size: 18px;
-    }
-
-    /* Mobile Responsive */
-    @media (max-width: 600px) {
-      .subtitle,
-      .graph-description {
-        text-align: center;
-      }
-    }
-  </style>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Water Analysis | Agile Achievers</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- global styles -->
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  
+
+  <!-- ── Navbar will be injected here ─────────────────────────────── -->
   <div id="navbar-container"></div>
-  
-  <!-- Page Header -->  
-  <header>  
-    <h1>Water Quality Test Results</h1>  
-  </header>  
-  
-  <!-- Water Analysis Sections -->  
-  <div class="water-analysis">  
-    <h2>Case 1: Polluted Water</h2>  
-    <p class="description">This sample shows extremely high turbidity values and drastic drops, indicating highly polluted water.</p>  
-    <img src="polluted water.jpg.png" alt="Graph showing high turbidity in polluted water">  
-  </div>  
-  
-  <div class="water-analysis">  
-    <h2>Case 2: Usable Water</h2>  
-    <p class="description">This water sample has consistent readings in the higher range but without sudden spikes, making it usable for non-drinking purposes.</p>  
-    <img src="usable water.jpg.jpeg" alt="Graph showing moderate turbidity in usable water">  
-  </div>  
-  
-  <div class="water-analysis">  
-    <h2>Case 3: Drinking Water</h2>  
-    <p class="description">This sample indicates a recovery from low readings to a stable, clean range — suitable for drinking after minor filtration.</p>  
-    <img src="drinking water.jpg.png" alt="Graph showing low turbidity in clean drinking water">  
-  </div>  
-  
-  <!-- Footer -->  
-  <footer>  
-    <p>© 2025 Environment Monitoring Team</p>  
-  </footer>  
-  
-<script src="script.js"></script> <!-- Keep this for dropdown and other navbar actions -->
-</body>  
+
+  <!-- ── Main content ─────────────────────────────────────────────── -->
+  <div class="container">
+    <h1 class="page-title">Water Quality Test Results</h1>
+    <p class="subtitle">Comparative turbidity graphs for three different samples</p>
+
+    <!-- Polluted water -->
+    <div class="card">
+      <h3>Case 1  •  Polluted Water</h3>
+      <p>This sample shows extremely high turbidity values and drastic drops, indicating highly polluted water.</p>
+      <img src="polluted water.jpg.png"
+           alt="Graph showing high turbidity in polluted water"
+           style="width:100%;max-width:600px;border-radius:12px;display:block;margin:20px auto 0">
+    </div>
+
+    <!-- Usable water -->
+    <div class="card">
+      <h3>Case 2  •  Usable Water</h3>
+      <p>This water sample has consistent readings in the higher range but without sudden spikes, making it usable for non-drinking purposes.</p>
+      <img src="usable water.jpg.jpeg"
+           alt="Graph showing moderate turbidity in usable water"
+           style="width:100%;max-width:600px;border-radius:12px;display:block;margin:20px auto 0">
+    </div>
+
+    <!-- Drinking water -->
+    <div class="card">
+      <h3>Case 3  •  Drinking Water</h3>
+      <p>This sample indicates a recovery from low readings to a stable, clean range – suitable for drinking after minor filtration.</p>
+      <img src="drinking water.jpg.png"
+           alt="Graph showing low turbidity in clean drinking water"
+           style="width:100%;max-width:600px;border-radius:12px;display:block;margin:20px auto 0">
+    </div>
+  </div>
+
+  <!-- ── Footer ──────────────────────────────────────────────────── -->
+  <footer>
+    © 2025 Agile Achievers – All rights reserved
+  </footer>
+
+  <!-- navbar loader & any other page-wide JS -->
+  <script src="script.js"></script>
+</body>
 </html>
