--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div class="card">
       <h3>Our Solution</h3>
-      <p>We prepared a prototype using sensors like DHT11, Turbidity Sensor, and MQ135 to measure temperature, humidity, turbidity of water, and gas concentrations. The data is collected using Arduino and ESP8266 and pushed to the cloud using ThingSpeak.</p>
+      <p>We proposed the development of an IoT-based Air and Water Quality Monitoring System. This system is designed to continuously monitor, analyze, and display real-time data on air and water quality parameters.</p>
     </div>
 
     <div class="card">
